# -----------------------------------------------------------------------------
# BUILDING WHEELS
# -----------------------------------------------------------------------------

[metadata]
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files =
    LICENSE.txt
    README.md

[bdist_wheel]
# https://packaging.python.org/guides/distributing-packages-using-setuptools/#wheels
universal=0

# -----------------------------------------------------------------------------
# FORMATTING AND LINTING
# -----------------------------------------------------------------------------

[mypy]
check_untyped_defs = True
ignore_missing_imports = True
warn_unused_ignores = True
warn_redundant_casts = True
warn_unused_configs = True

# -----------------------------------------------------------------------------
# TEST CONFIGURATION
# -----------------------------------------------------------------------------

[coverage:run]
include = hooks/*
omit = *tests*